--- a/_config.yml
+++ b/_config.yml
@@ -82,3 +82,13 @@ just_the_docs:
 
 kramdown:
   toc_levels: "1..3"
+
+solutions:
+  show_session_1: false
+  show_session_2: false
+  show_session_3: false
+  show_session_4: false
+  show_session_5: false
+  show_session_6: false
+  show_session_7: false
+  show_session_8: false
