--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ kramdown:
   toc_levels: "1..3"
 
 solutions:
-  show_session_1: false
+  show_session_1: true
   show_session_2: false
   show_session_3: false
   show_session_4: false
