--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ solutions:
   show_session_1: true
   show_session_2: true
   show_session_3: true
-  show_session_4: false
+  show_session_4: true
   show_session_5: false
   show_session_6: false
   show_session_7: false
