Fix ex 5 and release

--- a/_config.yml
+++ b/_config.yml
@@ -90,5 +90,5 @@ solutions:
   show_session_4: true
   show_session_5: true
   show_session_6: true
-  show_session_7: false
+  show_session_7: true
   show_session_8: false
