--- a/_config.yml
+++ b/_config.yml
@@ -91,4 +91,4 @@ solutions:
   show_session_5: true
   show_session_6: true
   show_session_7: true
-  show_session_8: false
+  show_session_8: true
