--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ aux_links:
   "Syllabus":
     - "//onderwijsaanbod.kuleuven.be/syllabi/n/H01P5BN.htm"
   "Uurrooster":
-    - "//www.kuleuven.be/sapredir/uurrooster/pre_laden.htm?OBJID=55589533&OTYPE=SM&TAAL=N&SEL_JAAR=2021"
-  "Videos (last year)":
+    - "//www.kuleuven.be/sapredir/uurrooster/pre_laden.htm?OBJID=55589533&OTYPE=SM&TAAL=N&SEL_JAAR=2022"
+  "Videos (from 2020)":
     - "https://www.youtube.com/playlist?list=PLMXWnt556xY4Sexd5FMBc-ZF7pFb2SLnU"
 
 # Makes Aux links open in a new tab. Default is false
