Showing solutions to session 6 and 7

--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,6 @@ solutions:
   show_session_3: true
   show_session_4: true
   show_session_5: true
-  show_session_6: false
-  show_session_7: false
+  show_session_6: true
+  show_session_7: true
   show_session_8: false
