--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ aux_links:
     - "//toledo.kuleuven.be/portal/#/home"
   "RARS":
     - "//github.com/TheThirdOne/rars/releases"
-  "Risc-V Card":
+  "RISC-V Card":
     - "/files/riscv-card.pdf"
   "Syllabus":
     - "//onderwijsaanbod.kuleuven.be/syllabi/n/H01P5BN.htm"
@@ -84,11 +84,11 @@ kramdown:
   toc_levels: "1..3"
 
 solutions:
-  show_session_1: true
-  show_session_2: true
-  show_session_3: true
-  show_session_4: true
-  show_session_5: true
-  show_session_6: true
-  show_session_7: true
-  show_session_8: true
+  show_session_1: false
+  show_session_2: false
+  show_session_3: false
+  show_session_4: false
+  show_session_5: false
+  show_session_6: false
+  show_session_7: false
+  show_session_8: false
